# hackathon_ynov

./: .gitignore
ollama_server/: Modelfile
scripts/: clean_dialogues.py  fine-tuning.ipynb  finetune_medical_qa_mac_mlx.ipynb  lora_config.yaml  pyproject.toml
scripts/adapters/: 0001400_adapters.safetensors  adapter_config.json
scripts/data/: test.jsonl  valid.jsonl
web_app/: .env.example  README.md  app.py  backend_api.py  state.py
web_app/.streamlit/: config.toml
web_app/assets/: generate_logo.py
web_app/components/: chat.py  cyber_security.py  sidebar.py  styles.py
web_app/data/: conversations.json
