[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "pandas>=3.0.3",
    "peft>=0.12.0",
    "pyyaml>=6.0.3",
    "torch>=2.1.0",
    "transformers>=4.45.0",
    "unsloth>=2026.6.9",
]
